--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>Taller eventos</title>
     </head>
     <body>
-        <button>Saludar</button>
+        <button onclick="alert('Hola!')">Saludar</button>
     </body>
 </html>
