--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
     <head>
         <title>Taller eventos</title>
+        
     </head>
     <body>
-        <button onclick="alert('Hola!')">Saludar</button>
+        <div style="padding: 5px; background-color: green;" id="div1">
+            <button onclick="alert('Hola!')">Saludar</button>
+        </div>
+        <script src="eventos.js"></script>
     </body>
 </html>
