--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div style="padding: 5px; background-color: green;" id="div1">
-            <button onclick="alert('Hola!')">Saludar</button>
+            <button id="boton">Saludar</button>
         </div>
         <script src="eventos.js"></script>
     </body>
